fix right overflow on mobile by hiding overflow on body

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ p {
 	font-size: 1em;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 @media only screen and (min-width: 601px) {
 	body {
 		margin: auto;
